--- a/templates/content_generator/prompt_versions/detail.html
+++ b/templates/content_generator/prompt_versions/detail.html
@@ -359,7 +359,7 @@
         <div class="header">
             <h1>Версия промпта #{{ version.version_number }}</h1>
             <div class="header-actions">
-                <a href="{% url 'admin:content_generator_promptversion_change' version.id %}" class="btn btn-primary">
+                <a href="{% url 'prompt_version_update' id=version.id %}" class="btn btn-primary">
                     <i class="fas fa-edit"></i> Редактировать
                 </a>
                 <a href="{% url 'prompt_version_list' %}" class="btn btn-secondary">
